@@ -17,6 +17,8 @@
  */
 
 
+#include "org_apache_hadoop_io_compress_snappy.h"
+
 #if defined HADOOP_SNAPPY_LIBRARY
 
 #include <stdio.h>
@@ -28,7 +30,6 @@
 #include "config.h"
 #endif // UNIX
 
-#include "org_apache_hadoop_io_compress_snappy.h"
 #include "org_apache_hadoop_io_compress_snappy_SnappyCompressor.h"
 
 #define JINT_MAX 0x7fffffff
