@@ -16,6 +16,7 @@
  * limitations under the License.
  */
 
+#include "org_apache_hadoop_io_compress_snappy.h"
 
 #if defined HADOOP_SNAPPY_LIBRARY
 
@@ -24,11 +25,10 @@
 #include <string.h>
 
 #ifdef UNIX
-#include "config.h"
 #include <dlfcn.h>
+#include "config.h"
 #endif
 
-#include "org_apache_hadoop_io_compress_snappy.h"
 #include "org_apache_hadoop_io_compress_snappy_SnappyDecompressor.h"
 
 static jfieldID SnappyDecompressor_clazz;
