@@ -381,6 +381,9 @@ Trunk (Unreleased)
     variables from current process environment/does not support overriding
     when launching new process (Chris Nauroth via bikas)
 
+    HADOOP-9481. Broken conditional logic with HADOOP_SNAPPY_LIBRARY. (Vadim
+    Bondarev via atm)
+
   OPTIMIZATIONS
 
     HADOOP-7761. Improve the performance of raw comparisons. (todd)
